# ffmpeg-audio

./: BUILD.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/: __init__.py  exceptions.py  ffmpeg_audio.py
src/ffmpeg_audio/: __init__.py  audio_segment_reader.py  audio_streamer.py  exceptions.py
