[build-system]
requires = ["setuptools>=80.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffmpeg-audio"
version = "0.1.2"
description = "A Python library for streaming audio/video files using FFmpeg with automatic resampling and channel mixing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.26.4",
]

[project.urls]
Homepage = "https://github.com/speech2srt/ffmpeg-audio"
Repository = "https://github.com/speech2srt/ffmpeg-audio"
Issues = "https://github.com/speech2srt/ffmpeg-audio/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
